<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ua.com.igorka.oa.android.homework2b.activity.ThirdActivity">

    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/return_serializable" android:title="@string/return_serializable_object"
        android:orderInCategory="101" app:showAsAction="never" />
    <item android:id="@+id/return_parcelable" android:title="@string/return_parcelable_object"
        android:orderInCategory="102" app:showAsAction="never" />
    <item android:id="@+id/return_parcelable_array" android:title="@string/return_parcelable_array"
        android:orderInCategory="103" app:showAsAction="never" />

</menu>
